@@ -77,16 +77,12 @@ emscripten: EMSCRIPTEN=1
 
 CXXINCS = -I../../include -Izlib -Ijpeglib -Ilibpng
 CPPFLAGS += $(CXXINCS) -DIRRLICHT_EXPORTS=1
-CXXFLAGS += -Wall -pipe -fno-exceptions -fno-rtti -fstrict-aliasing
+CXXFLAGS += -Wall -pipe -fno-exceptions -fno-rtti
 #CXXFLAGS += -std=gnu++11 -U__STRICT_ANSI__
 ifndef NDEBUG
   CXXFLAGS += -g -D_DEBUG
 else
-  ifndef EMSCRIPTEN
-    CXXFLAGS += -fexpensive-optimizations -O3
-  else
-    CXXFLAGS += -O3
-  endif
+  CXXFLAGS += -O3
 endif
 ifdef PROFILE
   CXXFLAGS += -pg
@@ -102,7 +98,7 @@ ifdef EMSCRIPTEN
     CXXFLAGS += -s WASM=1
   endif  
 else
-  CFLAGS := -O3 -fexpensive-optimizations -DPNG_THREAD_UNSAFE_OK -DPNG_NO_MMX_CODE -DPNG_NO_MNG_FEATURES -DPNG_ARM_NEON_OPT=0
+  CFLAGS := -O3 -DPNG_THREAD_UNSAFE_OK -DPNG_NO_MMX_CODE -DPNG_NO_MNG_FEATURES -DPNG_ARM_NEON_OPT=0
 endif
 
 sharedlib sharedlib_osx: CXXFLAGS += -fPIC
